--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
   </head>
   <body>
     <header class="flex justify-between bg-slate-900 h-1/2 md:w-screen">
-      <img
-        src="tailwindlogo.png"
-        alt="logo"
-        class="w-32 h-10 mx-5"
-      />
+      <img src="tailwindlogo.png" alt="logo" class="w-32 h-10 mx-5" />
 
       <nav class="mx-5 space-x-4 hidden md:block">
         <a href="#" style="color: white">Doc</a>
@@ -291,8 +287,8 @@
       <div>
         <img src="main.png" alt="" class="pl-10" />
       </div>
-
-      <img src="gggggg.png" alt="" class="overflow-y-auto rounded-[8px] mr-5" />
+      <div class="w.full md:w-1/2 scroll- flex justify-around items-center">
+      <img src="gggggg.png" alt="" class=" scroll-m-10 overflow-y-auto rounded-[8px] mr-5" /></div>
     </section>
   </body>
 </html>
